--- a/style.css
+++ b/style.css
@@ -1,60 +1,90 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,900italic,900,700italic,700,500italic,500,400italic,300italic,300,100italic,100);
-* {
-  box-sizing: border-box;
-  margin: 0;
+:root {
+  --effect: hover 1s linear infinite;
 }
-
-h1, p, h2, h3, h4, ul, li, div {
-  margin: 0;
-  padding: 0;
+*{
+   margin:0;
 }
 
 body {
-  padding: 0;
+  display: flex;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
-  display: flex;
-  font-family: Roboto;
+  background: linear-gradient(#17082e 0,#1a0933 7%,#1a0933 80%,#0c1f4c 100%);
+  align-items: center;
+  justify-content: center;
 }
 
-.loading-page {
-      background-image: linear-gradient(#17082e 0,#1a0933 7%,#1a0933 80%,#0c1f4c 100%);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.loading-page .counter {
+div {
   text-align: center;
 }
-.loading-page .counter p {
-  font-size: 40px;
-  font-weight: 100;
-  color: #0d6af6;
+
+p {
+  display: inline-block;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 8em;
+  font-family: arial;
+  font-weight: 900;
+  transform: scale(2);
+  color: #0c1f4c;
+  -webkit-text-stroke: 8px gray;
 }
-.loading-page .counter h1 {
-  color: white;
-  font-size: 60px;
-  margin-top: -10px;
+
+p:nth-child(1) {
+  animation: var(--effect);
 }
-.loading-page .counter hr {
-  background: #0d6af6;
-  border: none;
-  height: 1px;
+
+p:nth-child(2) {
+  animation: var(--effect) .125s;
 }
-.loading-page .counter {
-  position: relative;
-  width: 200px;
+
+p:nth-child(3) {
+  animation: var(--effect) .25s;
 }
-.loading-page .counter h1.abs {
-  position: absolute;
-  top: 0;
-  width: 100%;
+
+p:nth-child(4) {
+  animation: var(--effect) .375s;
 }
-.loading-page .counter .color {
-  width: 0px;
-  overflow: hidden;
-  color: #0d6af6;
+
+p:nth-child(5) {
+  animation: var(--effect) .375s;
+}
+
+p:nth-child(6) {
+  animation: var(--effect) .5s;
+}
+
+p:nth-child(7) {
+  animation: var(--effect) .675s;
+}
+
+p:nth-child(8) {
+  animation: var(--effect) .75s;
+}
+
+p:nth-child(9) {
+  animation: var(--effect) .95s;
+}
+
+@keyframes hover {
+  0% {
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 2px gray;
+  }
+
+  20% {
+    transform: scale(1);
+    color: pink;
+    -webkit-text-stroke: 3px red;
+    filter: drop-shadow(0 0 1px black)drop-shadow(0 0 1px black)drop-shadow(0 0 3px red)drop-shadow(0 0 5px red)hue-rotate(10turn);
+  }
+
+  50% {
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 5px gray;
+  }
+
+
 }
